--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.1",
-    "react-select": "^5.8.0"
+    "react-select": "^5.8.0",
+    "history": "^5.3.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
